--- a/src/pages/jury.html
+++ b/src/pages/jury.html
@@ -95,9 +95,10 @@
                                     <br>
                                 </p>
                                 <ul>
-                                    <li>Journaliste / Ecrivain</li>
-                                    <li>Expert en Communication</li>
-                                    <li>Expérience dans les Médias</li>
+                                    <li>• Journaliste / Ecrivain</li>
+                                    <li>• Expert en Communication</li>
+                                    <li>• Crédibilité et Notoriété</li>
+                                    <li>• Expérience dans les Médias</li>
                                 </ul>
                             </div>
                             <div class="col-sm-12 col-md text-center" dir="auto" key="com-2">
@@ -107,7 +108,10 @@
                                     <br>
                                 </p>
                                 <ul>
-                                    <li>Consul honoraire de la république de croitie à casablanca.</li>
+                                    <li>• Consul honoraire de la république de croitie à casablanca.</li>
+                                    <li>• Président de african business developpement</li>
+                                    <li>• Président fondateur de l’association de développement en afrique</li>
+                                    <li>• Entrepreneur</li>
                                 </ul>
                             </div>
                             <div class="col-sm-12 col-md text-center" dir="auto" key="com-3">
@@ -117,8 +121,10 @@
                                     <br>
                                 </p>
                                 <ul>
-                                    <li>Entrepreneur Culture</li>
-                                    <li>Maîtrise de la ville de Casablanca</li>
+                                    <li>• Producteur auteur et metteur en scène</li>
+                                    <li>• Entrepreneur Culture</li>
+                                    <li>• Maîtrise de la ville de Casablanca</li>
+                                    <li>• Pluridisciplinaire</li>
                                 </ul>
                             </div>
                         </div>
@@ -128,161 +134,44 @@
                             </div>
                         </div>
                         <div class="mt-5 row text-white g-2 jury-members">
-                            <div dir="auto" key="j1" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lkhmari.png" alt="">
-                                <p class="">
-                                    <span class="vert">NOUR-EDDINE LAKHMARI</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Cinéaste, réalisateur et Producteur</li>
-                                    <li>• Norvégo-marocain résidant à Casablanca</li>
-                                    <li>• Expérience Audiovisuelle importante</li>
-                                    <li>• Connu pour ses films réalisés à Casablanca</li>
-                                </ul>
+                            <div dir="auto" key="j1" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lkhmari.png" alt=""><p class=""> <span class="vert">M. NOUR-EDDINE LAKHMARI</span> <br> </p> <ul> <li>• Cinéaste, réalisateur et Producteur</li> <li>• Norvégo-marocain résidant à Casablanca</li> <li>• Expérience Audiovisuelle importante</li> <li>• Connu pour ses films réalisés à Casablanca</li> </ul>
                             </div>
-                            <div dir="auto" key="j2" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/karim.png" alt="">
-                                <p class="">
-                                    <span class="vert">Dr. KARIM ADYEL</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Avocat</li>
-                                    <li>• Docteur d’Etat en Droit international</li>
-                                    <li>• Arbitre au Tribunal Arbitral du Sport (TAS)</li>
-                                </ul>
+                            <div dir="auto" key="j8" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/oudaha.png" alt=""> <p class=""> <span class="vert">M. MOHAMED OUDAHA</span> <br> </p> <ul> <li>• Publicitaire international</li> <li>Directeur de Création lauréat et membre du jury du « Lion d’Or » au Festival de Cannes de la publicité</li> </ul>
                             </div>
-                            <div dir="auto" key="j3" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/derhem.png" alt="">
-                                <p class="">
-                                    <span class="vert">MOHAMED DERHEM</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• ARTISTE</li>
-                                    <li>• Notoriété et Crédibilité</li>
-                                    <li>• Connaissance de Casablanca et son Patrimoine Oral et Culturel</li>
-                                    <li>• Entrepreneur</li>
-                                </ul>
+                            <div dir="auto" key="j2" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/karim.png" alt=""> <p class=""> <span class="vert">Dr. KARIM ADYEL</span> <br> </p> <ul><li>• Avocat</li><li>• Docteur d’Etat en Droit international</li><li>• Arbitre au Tribunal Arbitral du Sport (TAS)</li></ul> 
                             </div>
-                            <div dir="auto" key="j4" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lahlou.png" alt="">
-                                <p class="">
-                                    <span class="vert">HICHAM LAHLOU</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• DESIGNER • Pluridisciplinaire</li>
-                                    <li>• Célèbre et crédible • Expérience internationale et entrepreneur</li>
-                                </ul>
+                            <div dir="auto" key="j10" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mazned.png" alt=""> <p class=""> <span class="vert text-uppercase">M. Brahim El Mazned</span> <br> </p> <ul> <li>• Entrepreneur Culturel</li> <li>• Fondateur de Visa For Music</li> <li>• Directeur du Festival Timitar</li> <li>• Expert auprès de l’UNESCO</li> </ul>
                             </div>
-                            <div dir="auto" key="j5" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/abid.png" alt="">
-                                <p class="">
-                                    <span class="vert">SAAD ABID</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Social entrepreneur</li>
-                                    <li>• Grande notoriété et crédibilité dans les questions environnementales</li>
-                                    <li>• Présence forte sur le digital</li>
-                                </ul>
+                            <div dir="auto" key="j3" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/derhem.png" alt=""> <p class=""> <span class="vert">M. MOHAMED DERHEM</span> <br> </p> <ul> <li>• ARTISTE</li> <li>• Leader du groupe Jil Jilala</li></ul> 
                             </div>
-                            <div dir="auto" key="j6" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nezha.png" alt="">
-                                <p class="">
-                                    <span class="vert">NEZHA BELKADY</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Entrepreneure Culturelle</li>
-                                    <li>• CO-FONDATRICE DE STUDIO DES ARTS VIVANTS</li>
-                                </ul>
+                            <div dir="auto" key="j4" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/lahlou.png" alt=""> <p class=""> <span class="vert">M. HICHAM LAHLOU</span> <br> </p> <ul> <li>• Désigner international</li> <li>• Président de l’Africa Design Organisation</li> </ul>
                             </div>
-                            <div dir="auto" key="j7" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mouna.png" alt="">
-                                <p class="">
-                                    <span class="vert">MOUNA HACHIM</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Auteure et Ecrivaine</li>
-                                    <li>•  Grande culture et riche production éditoriale</li>
-                                    <li>• Crédibilité • Patrimoine</li>
-                                </ul>
+                            <div dir="auto" key="j7" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mouna.png" alt=""> <p class=""> <span class="vert">Mme. MOUNA HACHIM</span> <br> </p> <ul> <li>• Auteure et Ecrivaine</li></ul>
                             </div>
-                            <div dir="auto" key="j8" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/oudaha.png" alt="">
-                                <p class="">
-                                    <span class="vert">MOHAMED OUDAHA</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Créatif / Publicitaire</li>
-                                    <li>• Lauréat du lion d’or du Festival de CANNES</li>
-                                    <li>• Le créatif Marocain le plus primé dans le monde </li>
-                                </ul>
+                            <div dir="auto" key="j5" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/abid.png" alt=""> <p class=""> <span class="vert">M. SAAD ABID</span> <br> </p> <ul> <li>• Environnementaliste, Entrepreneur Social et Aventurier</li> </ul>
                             </div>
-                            <div dir="auto" key="j9" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/jall.png" alt="">
-                                <p class="">
-                                    <span class="vert">MOHAMED JALL</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Architect et designer de l’opéra du sultanat Oman</li>
-                                    <li>• Pluridisciplinaire</li>
-                                    <li>• Expérience internationale</li>
-                                </ul>
+                            <div dir="auto" key="j9" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/jall.png" alt=""> <p class=""> <span class="vert">M. MOHAMED JALL</span> <br> </p> <ul> <li>• Architecte et Designer international</li> </ul>
                             </div>
-                            <div dir="auto" key="j10" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/mazned.png" alt="">
-                                <p class="">
-                                    <span class="vert text-uppercase">Brahim El Mazned</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                   <li>• Entrepreneur Culturel</li>
-                                   <li>• Fondateur de Visa For Music</li>
-                                   <li>• Directeur du Festival Timitar</li>
-                                   <li>• Expert auprès de l’UNESCO</li>
-                                </ul>
+                            <div dir="auto" key="j6" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/nezha.png" alt=""> <p class=""> <span class="vert">Mme. NEZHA BELKADY</span> <br> </p> <ul> <li>• Entrepreneur Culturelle</li></ul>
                             </div>
-                            <div dir="auto" key="j11" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" height="120px" width="120px" src="../images/comite/adnane.png" alt="">
-                                <p class="">
-                                    <span class="vert">AZIZ DADANE</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Chef d’entreprise • Acteur Socio-Culturel</li>
-                                    <li>• Crédibilité • Grande Culture</li>
-                                    <li>• Expert en nouvelle technologies</li>
-                                </ul>
+                            <div dir="auto" key="j11" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" height="120px" width="120px" src="../images/comite/adnane.png" alt=""> <p class=""> <span class="vert">M. AZIZ DADANE</span> <br> </p> <ul> <li>• Président du Directoire de S2M et Président de l’Association Nagham</li> </ul>
                             </div>
-                            <div dir="auto" key="j12" class="col-md-4 text-center">
-                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hind.png" alt="">
-                                <p class="">
-                                    <span class="vert">HIND LAIDI</span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Fondatrice et Présidente De l’association JOUD</li>
-                                    <li>• Associatif • Crédibilité</li>
-                                    <li>• Experience internationale</li>
-                                </ul>
+                            <div dir="auto" key="j12" class="col-md-3 mb-5 text-center">
+                                <img class="mb-3 rounded-circle" width="120px" src="../images/comite/hind.png" alt=""> <p class=""> <span class="vert">Mme. HIND LAIDI</span> <br> </p> <ul> <li>• Présidente de l’Association Jood</li> </ul>  
                             </div>
-                            <div dir="auto" key="j13" class="col-md-4 text-center">
-                                <div style="width: 120px; height: 120px;" class="rounded-circle bg-secondary mb-3 mx-auto"></div>
-                                <p class="">
-                                    <span class="vert  text-uppercase">Yassine Gamal </span>
-                                    <br>
-                                </p>
-                                <ul>
-                                    <li>• Membre du mouvement OTED, initiative dédiée au développement et l’innovation territoriale</li>
-                                    <li>• Expert international en Developpement de Marché et en Management de l’innovation</li>
-                                </ul>
+                            <div dir="auto" key="j13" class="col-md-3 mb-5 text-center">
+                                <div style="width: 120px; height: 120px;" class="rounded-circle bg-secondary mb-3 mx-auto"></div> <p class=""> <span class="vert  text-uppercase">M. Yassine Gamal </span> <br> </p> <ul> <li>• Membre du mouvement OTED, initiative dédiée au développement et l’innovation territoriale</li> <li>• Expert international en Developpement de Marché et en Management de l’innovation</li> </ul>
                             </div>
                         </div>
                         <div class="row">
